# 2D-Graphics-Library

./: CMakeLists.txt  README.md  Source.cpp  example.cpp  gfx.hpp  main.cpp  todo.txt
examples/: CMakeLists.txt  bubble_sort_visualization.cpp  loading_image.cpp  multiple_windows.cpp  straight_line.cpp
include/: labels.h  opcodes.h
include/ast/: lexer.h  parser.h
include/utils/: debug_print.h  filesystem.h  my_bool.h  my_inttypes.h  my_string_view.h  my_vector.h  string_utils.h
source/: assembler.c  labels.c  opcodes.c
source/ast/: lexer.c  parser.c
source/utils/: debug_print.c  filesystem.c  my_string_view.c  my_vector.c  string_utils.c
src/include/: construction.hpp  gfx  gfx.hpp  glfunctions.hpp  parent_renderer.hpp
src/include/draws/: circle.hpp  rectangle.hpp  shape.hpp  sprite.hpp  transformation.hpp
src/include/linux/: renderer.hpp
src/include/linux/input/: keyboard.hpp  mouse.hpp
src/include/utils/: color.hpp  geometry.hpp  utils.hpp  vector.hpp  vertex.hpp
src/include/windows/: renderer.hpp
src/include/windows/input/: keyboard.hpp  mouse.hpp
src/includes/: gfx.hpp  glfunctions.hpp
src/includes/draws/: circle.hpp  rectangle.hpp  shape.hpp  sprite.hpp  transformation.hpp
src/includes/linux/: renderer.hpp
src/includes/linux/input/: keyboard.hpp  mouse.hpp
src/includes/util/: color.hpp  geometry.hpp  util.hpp  vector.hpp  vertex.hpp
src/includes/windows/: renderer.hpp
src/includes/windows/input/: keyboard.hpp  mouse.hpp
src/source/: glfunctions.cpp  parent_renderer.cpp
src/source/draws/: circle.cpp  rectangle.cpp  shape.cpp  sprite.cpp  transformation.cpp
src/source/linux/: renderer.cpp
src/source/linux/input/: keyboard.cpp  mouse.cpp
src/source/utils/: color.cpp  utils.cpp
src/source/windows/: renderer.cpp
src/source/windows/input/: keyboard.cpp  mouse.cpp
